--- a/package.json
+++ b/package.json
@@ -1,42 +1,27 @@
 {
-  "homepage": "http://Ironious4.github.io/Challenge-2-Bot-Battlr",
-  "name": "react-hooks-bot-battlr-code-challenge",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "web-vitals": "^0.2.4"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "json-server": "^0.15.1"
-  },
+  "name": "json-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "set PORT=8001 && react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "server": "json-server --watch db.json -p 8002"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "build":"react-scripts build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ironious4/Challenge-2-Bot-Battlr.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Tyrone",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ironious4/Challenge-2-Bot-Battlr/issues"
+  },
+  "homepage":"https://github.com/Ironious4.Challenge-2-Bot-Battlr#readme",
+  "dependencies": {
+    "json-server": "^0.17.1",
+      "postcss": "^8.4.24",
+    "postcss-safe-parser": "^6.0.0"
+
   }
 }
